# naivesearch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: example.py  fruits.txt
naivesearch/: __init__.py  main.py
naivesearch/indexer/: __init__.py  chunker.py  converter.py  formatter.py  inverted_index.py  preprocess_composer.py  test_chunker.py  test_converter.py  test_formatter.py  test_inverted_index.py  types.py
naivesearch/preprocessors/: __init__.py  chunker.py  converter.py  formatter.py  test_chunker.py  test_converter.py  test_formatter.py
